--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    color: black;
+    color: white;
     font-family: 'calibry';
     background-image: url('images/outside.png');
     font-family: 'Bitter', serif;
@@ -18,7 +18,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 900px;
+    width: 600px;
     margin: 20px auto 10px auto;
 }
 
